<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Generic strings -->
	<string name="current_value_is">Current value is</string>

    <string name="no_entries">No entries yet</string>
    <string name="app_name">Balance Pad</string>
	<string name="menu_insert">Add entry</string>
	<string name="menu_settings">Settings</string>
	<string name="edit_entry">Edit entry</string>
	<string name="save">Save</string>
	<string name="description">Description</string>
	<string name="menu_delete">Delete entry</string>
	<string name="cancel">Cancel</string>
	<string name="event_date">Entry date</string>
	<string name="change_date">Change date</string>
	<string name="amount">Amount</string>
	<string name="entry_saved">Entry saved</string>
	
	<string name="settings_spinner_label">Currencies</string>
	<string name="currency">Currency</string>
	<string-array name="currencies_array">
		<item>AUD</item>
		<item>EUR</item>
		<item>NZD</item>
		<item>SEK</item>
		<item>USD</item>
	</string-array>
</resources>
