<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/event_date" />
	
	<EditText android:id="@+id/event_date"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:layout_weight="0" android:inputType="datetime"/>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/amount" />
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<EditText android:id="@+id/amount" 
		  android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="0" android:inputType="numberDecimal" android:singleLine="true"/>
		<Spinner android:id="@+id/currency"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:prompt="@string/currency" />
	</LinearLayout>	
	
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/description" />
	<EditText android:id="@+id/description" 
	  android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:layout_weight="1"
		android:gravity="top"/>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<Button android:id="@+id/save" 
		  android:text="@string/save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
	
		<Button android:id="@+id/cancel" 
		  android:text="@string/cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
	</LinearLayout>

</LinearLayout>